Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29171

changing the value of wsrep_gtid_domain_id with full cluster restart fails on some nodes

    XMLWordPrintable

Details

    Description

      I know that changing wsrep_gtid_domain_id in the configuration file on all nodes requires a full cluster stop and restart to pick up the change as only the first node will actually use the config file value, while all further nodes receive the value to use from their donor during IST/SST.

      But when e.g. changing the relevant configuration settings from

      wsrep-gtid-mode=ON
      wsrep_gtid_domain_id=100
      gtid_domain_id=...different value per node....
      

      to

      wsrep_gtid_domain_id=200
      

      then stopping all nodes, staring node-1 with galera_new_cluster, and node-2 with systemctl start mariadb, all is fine so far, both nodes show wsrep_gtid_domain_id=200 in SHOW VARIABLES LIKE 'wsrep_gtid_domain_id'. But when starting a 3rd or further nodes they all usually still show 100 instead of 200.

      Looking at the error logs I see node-3 usually use node-2 as donor, not node-1.

      When I force the node started with galera_new_cluster as the default donor with wsrep_sst_donor=node-1 I get the correct new 200 value on all nodes though.

      So somehow nodes seem to remember the previous value and pass that on to joiners instead of the value they received from their own donor, or read from their configuration file.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              hholzgra Hartmut Holzgraefe
              Votes:
              4 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.