MDEV-29171 changing the value of wsrep_gtid_domain_id with full cluster restart fails on some nodes

Fix `wsrep_init_gtid()` to avoid overwriting the domain id received
during state transfer.

Reviewed-by: Jan Lindström <jan.lindstrom@mariadb.com>